--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">เข้าสู่ระบบ</a>
+        <a class="nav-link" href="#">การจองห้อง</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">ข้อมูลห้อง</a>
