--- a/Template.html
+++ b/Template.html
@@ -12,7 +12,7 @@
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Filo</a>
+  <a class="navbar-brand" href="home.html">Filo</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -25,7 +25,7 @@
         <a class="nav-link" href="reserve.html">การจองห้อง</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="roomdetail.html">ข้อมูลห้อง</a>
+        <a class="nav-link" href="inforoom.html">ข้อมูลห้อง</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="Termsofservice.html">เงื่อนไขการบริการ</a>
@@ -46,7 +46,7 @@
 </div>
 
 <!-- footer.html -->
-<footer class="bg-green text-light p-4 mt-5">
+<footer class="bg-dark text-light p-4 mt-5">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
