--- a/Showcondition.html
+++ b/Showcondition.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Your Website</title>
+  <title>Conditions</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styleTime.css">
 </head>
 <body>
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Your Website</a>
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color: pink;">
+  <a class="navbar-brand" href="#">Conditions</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -38,21 +38,72 @@
 
 </div>
 
-<!-- Footer -->
-<footer class="bg-dark text-light p-4 mt-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h4>Contact Us</h4>
-        <p>Name : mama mama</p>
-        <p>Email: your@email.com</p>
-        <p>Phone: 123-456-7890</p>
-      </div>
-      <div class="col-md-6 text-right">
-        <p>&copy; 2023 Your Website. All rights reserved.</p>
-      </div>
+    <div style="text-align: center;">
+    <ul class="ul-text-glow label-text-glow" >
+        <li class="li-text-glow">
+            <input class="input-text-glow" type="checkbox" checked=""/>
+            <div class="div-text-glow">C</div>
+        </li >
+        <li class="li-text-glow">
+            <input class="input-text-glow" type="checkbox">
+            <div class="div-text-glow">O</div>
+        </li>
+        <li class="li-text-glow">
+            <input class="input-text-glow" type="checkbox">
+            <div class="div-text-glow">N</div>
+        </li>
+        <li class="li-text-glow">
+            <input class="input-text-glow" type="checkbox">
+            <div class="div-text-glow">D</div>
+        </li>
+        <li class="li-text-glow">
+            <input class="input-text-glow" type="checkbox"/>
+            <div class="div-text-glow">I</div>
+        </li>
+        <li class="li-text-glow">
+            <input class="input-text-glow" type="checkbox" checked="">
+            <div class="div-text-glow">T</div>
+        </li>
+        <li class="li-text-glow">
+            <input class="input-text-glow" type="checkbox">
+            <div class="div-text-glow">I</div>
+        </li>
+        <li class="li-text-glow">
+            <input class="input-text-glow" type="checkbox"/>
+            <div class="div-text-glow">O</div>
+        </li>
+        <li class="li-text-glow">
+            <input class="input-text-glow" type="checkbox">
+            <div class="div-text-glow">N</div>
+        </li>
+    </ul>
     </div>
-  </div>
+
+    <!---->
+
+    <div style="font-size: 20px;"><br>
+       1.> ค่าบริการ จ่ายหลังจากลูกค้าได้ทำการจองห้องของแมวเสร็จสิ้น (จ่ายได้ทาง QR-Code)<br><br>
+
+        2.>ระหว่างการฝากเลี้ยง หากแมวที่นำมาฝากเกิดการอุบัติเหตุหรือเจ็บป่วยระหว่างานฝากเลี้ยง ทางเจ้าของร้านจะไม่รับผิดชอบทั้งสิ้น<br><br>
+
+        3.>ราคาฝากเลี้ยง ขั้นต่ำ 1 วัน<br><br>
+
+        4.>ระหว่างการดูแล หากแมวเกิดอาการป่วย จะสัตว์แพทย์คอยดูแล และจะคิดบริการเพิ่มเติม<br><br>
+
+        5.>สิ่งอำนวยความสะดวกภายในห้อง อาทิ ของเล่นแมว กะบะทราย จานข้าว กล้องวงจรปิด<br><br>
+
+        6.>ประเภทของห้องมี 4 ประเภท<br><br>
+        1.	standard<br>
+        2.	superior<br>
+        3.	deluxe<br>
+        4.	suite
+
+
+
+        
+    </div>
+
+    <footer class="text-light p-4 mt-5"></footer>
 </footer>
 
 <!-- Bootstrap JS, Popper.js, and jQuery -->
