--- a/login.html
+++ b/login.html
@@ -3,15 +3,55 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Your Website</title>
+  <title>Filo</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <style>
+    body {
+        background-color: #fce4ec; /* สีพื้นหลัง */
+        font-family: 'Arial', sans-serif;
+        color: #333; /* สีข้อความทั่วไป */
+    }
+
+    .container {
+        margin-top: 100px;
+    }
+
+    .col-md-4 {
+        text-align: right;
+    }
+
+    .form-control {
+        border: 2px solid #ff4081; /* สีขอบ input */
+        border-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+
+    .btn-info {
+        background-color: #ff4081; /* สีปุ่มกลับหน้าหลัก */
+        border-color: #ff4081;
+    }
+
+    .btn-primary {
+        background-color: #ff4081; /* สีปุ่มเข้าสู่ระบบ */
+        border-color: #ff4081;
+    }
+
+    .btn-info:hover, .btn-primary:hover {
+        background-color: #d81b60; /* สีเมื่อโฮเวอร์ปุ่ม */
+        border-color: #d81b60;
+    }
+
+    p {
+        color: #888; /* สีข้อความท้าย */
+    }
+</style>
 </head>
 <body>
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Your Website</a>
+  <a class="navbar-brand" href="#">Filo</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -32,28 +72,56 @@
 
 <!-- Main Content -->
 <div class="container mt-5">
-  <h2>ยินดีต้อนรับสู่เว็บไซต์ของเรา</h2>
+  <h2>Welcome to Filo</h2>
   <!-- ทำส่วนหลักของเว็บไซต์ที่นี่ -->
 
 </div>
 
 <!-- Footer -->
-<footer class="bg-dark text-light p-4 mt-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h4>Contact Us</h4>
-        <p>Name : mama mama</p>
-        <p>Email: your@email.com</p>
-        <p>Phone: 123-456-7890</p>
-      </div>
-      <div class="col-md-6 text-right">
-        <p>&copy; 2023 Your Website. All rights reserved.</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+    <h3 align="center">Filo</h3>
+     <form  name="formlogin" action="" method="POST" id="login">
+              <div class="row">
+              <label class="col-md-4" style="text-align:right"> Username </label>
+                <div class="col-md-4">
+                <input type="text"  name="Username" class="form-control" required placeholder="Username" />
+                </div>
+                </div>
+
+
+              <div class="row">
+              <br>
+              <label class="col-md-4" style="text-align:right"> Password </label>
+                <div class="col-md-4">
+                     <input type="password" name="Password" class="form-control" required placeholder="Password" />
+            </div>
+              </div>
+
+
+
+              <div class="row">
+              <div class="col-md-4"> </div>
+              <div class="col-md-4">
+              <br /><input name="remember" type="checkbox" value="Remember me" autocomplete="off" /> จำไว้ในระบบ
+
+                </div>
+                <div class="col-md-4"> </div>
+              &nbsp; &nbsp; &nbsp; <br /> 
+              <div class="col-md-12">
+              <p align="center">
+              
+              <a href="before.html" class="btn btn-info btn-sm"> กลับหน้าหลัก </a>
+              <button href="home.html" type="submit" class="btn btn-primary btn-sm" id="btn" value="Signin"> เข้าสู่ระบบ </button> 
+              </p>
+              </div>
+              <br>
+              
+            </form>
       </div>
     </div>
   </div>
-</footer>
-
 <!-- Bootstrap JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
