--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     }
 
     .container {
-        margin-top: 100px;
+        margin-top: 30px;
     }
 
     .col-md-4 {
@@ -72,7 +72,7 @@
 
 <!-- Main Content -->
 <div class="container mt-5">
-  <h2>Welcome to Filo</h2>
+  <h2 style="text-align: center;">Welcome to Filo</h2>
   <!-- ทำส่วนหลักของเว็บไซต์ที่นี่ -->
 
 </div>
