--- a/Showcondition.html
+++ b/Showcondition.html
@@ -97,14 +97,50 @@
         2.	superior<br>
         3.	deluxe<br>
         4.	suite
+        <p class="body-carousel-1">
+            <p id="slider" class="root-carousel ">
+                <input class="inputcarousel" type="radio" name="slider" id="s1" checked/>
+                <input class="inputcarousel" type="radio" name="slider" id="s2"/>
+                <input class="inputcarousel" type="radio" name="slider" id="s3"/>
+                <input class="inputcarousel" type="radio" name="slider" id="s4"/>
+                <input class="inputcarousel" type="radio" name="slider" id="s5"/>
+                <label class="label-carousel" for="s1" id="slider1">
+                    <img class="img-carousel" src="./img/std2.jpg" alt />
+                </label>
+                <label class="label-carousel" for="s2" id="slider2">
+                    <img class="img-carousel" src="./img/supe1.jpg" alt/>
+                </label>
+                <label class="label-carousel" for="s3" id="slider3">
+                    <img class="img-carousel" src="./img/delux.jpg" alt/>
+                </label>
+                <label class="label-carousel" for="s4" id="slider4">
+                    <img class="img-carousel" src="./img/sweet.jpg" alt/>
+                </label>
+                
+            </p>
+        </p>
 
 
 
         
     </div>
 
-    <footer class="text-light p-4 mt-5"></footer>
-</footer>
+  <!-- Footer -->
+<footer class="bg-dark text-light p-4 mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h4>Contact Us</h4>
+          <p>Name : mama mama</p>
+          <p>Email: your@email.com</p>
+          <p>Phone: 123-456-7890</p>
+        </div>
+        <div class="col-md-6 text-right">
+          <p>&copy; 2023 Your Website. All rights reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 <!-- Bootstrap JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
