--- a/infoRoom2.html
+++ b/infoRoom2.html
@@ -24,17 +24,17 @@
               <!-- ข้อมูลห้องประเภท 1 -->
               <ul style="list-style: none; padding: 0; text-align: left;">
                 <div style="text-align: center;">
-                  <img src="path/to/image1.jpg" alt="ห้องประเภท 1" width="250">
+                  <img src="img/std1.jpg" alt="ห้องประเภท 1" width="450">
               </div>
-                <li>Standard ฝากเลี้ยงแมว ได้ สูงสุด : 1 ตัว</li>
-                <li>สิ่งอำนวยความสะดวกภายในห้อง</li>
-                <li>ของเล่นแมว</li>
-                <li>กระบะทราย</li>
-                <li>จานข้าว</li>
-                <li>จานน้ำ</li>
-                <li>กล้องวงจรปิด</li>
-                <li>แอร์</li>
-                <li><a style="color: red;" href="#">อาหารแมว ผู้ฝากต้องนำมาเอง หรือ เสียค่าใช้จ่ายเพิ่ม</a></li>
+                <li>    Standard ฝากเลี้ยงแมว ได้ สูงสุด : 1 ตัว</li>
+                <li>    สิ่งอำนวยความสะดวกภายในห้อง</li>
+                <li>    ของเล่นแมว</li>
+                <li>    กระบะทราย</li>
+                <li>    จานข้าว</li>
+                <li>    จานน้ำ</li>
+                <li>    กล้องวงจรปิด</li>
+                <li>    แอร์</li>
+                <li><a style="color: red;" href="#">อาหารแมว ผู้ฝากต้องนำมาเอง</a></li>
             </ul>
             
               
@@ -53,16 +53,20 @@
             </div>
             <div class="card-body">
               <!-- ข้อมูลห้องประเภท 1 -->
-              <ul>
-                <div style="text-align: center;" width>
-                  <img src="\img\std1.jpg" alt="ห้องประเภท 1" width="250">
-              </div>              
-                <li>ข้อมูล 1</li>
-                <li>ข้อมูล 2</li>
-                <!-- เพิ่มข้อมูลตามต้องการ -->
-              </ul>
-              <!-- รูปภาพห้องประเภท 2 -->
-              <img src="path/to/image2.jpg" alt="ห้องประเภท 2">
+              <ul style="list-style: none; padding: 0; text-align: left;">
+                <div style="text-align: center;">
+                  <img src="img/supe1.jpg" alt="ห้องประเภท 1" width="450">
+              </div>
+                <li>    Superior ฝากเลี้ยงแมว ได้ สูงสุด : 3 ตัว</li>
+                <li>    สิ่งอำนวยความสะดวกภายในห้อง</li>
+                <li>    ของเล่นแมว</li>
+                <li>    กระบะทราย</li>
+                <li>    จานข้าว</li>
+                <li>    จานน้ำ</li>
+                <li>    กล้องวงจรปิด</li>
+                <li>    แอร์</li>
+                <li><a style="color: red;" href="#">อาหารแมว ผู้ฝากต้องนำมาเอง</a></li>
+            </ul>
             </div>
           </div>
         </div>
@@ -74,17 +78,21 @@
               ประเภทห้อง 3 - Deluxe 
             </div>
             <div class="card-body">
-              <!-- ข้อมูลห้องประเภท 3 -->
-              <ul>
-                <div style="text-align: center;" width>
-                  <img src="\img\std1.jpg" alt="ห้องประเภท 3" width="250">
-              </div>              
-                <li>ข้อมูล 1</li>
-                <li>ข้อมูล 2</li>
-                <!-- เพิ่มข้อมูลตามต้องการ -->
-              </ul>
-              <!-- รูปภาพห้องประเภท 3 -->
-              <img src="path/to/image3.jpg" alt="ห้องประเภท 3">
+              <!-- ข้อมูลห้องประเภท 4 -->
+              <ul style="list-style: none; padding: 0; text-align: left;">
+                <div style="text-align: center;">
+                  <img src="img/delux.jpg" alt="ห้องประเภท 1" width="450">
+              </div>
+                <li>    Deluxe ฝากเลี้ยงแมว ได้ สูงสุด : 6 ตัว</li>
+                <li>    สิ่งอำนวยความสะดวกภายในห้อง</li>
+                <li>    ของเล่นแมว</li>
+                <li>    กระบะทราย</li>
+                <li>    จานข้าว</li>
+                <li>    จานน้ำ</li>
+                <li>    กล้องวงจรปิด</li>
+                <li>    แอร์</li>
+                <li><a style="color: red;" href="#">อาหารแมว ผู้ฝากต้องนำมาเอง</a></li>
+            </ul>
             </div>
           </div>
         </div>
@@ -96,17 +104,24 @@
               ประเภทห้อง 4 - Sweet 
             </div>
             <div class="card-body">
-              <!-- ข้อมูลห้องประเภท 1 -->
-              <ul>
-                <div style="text-align: center;" width>
-                  <img src="\img\std1.jpg" alt="ห้องประเภท 4" width="250">
-              </div>              
-                <li>ข้อมูล 1</li>
-                <li>ข้อมูล 2</li>
-                <!-- เพิ่มข้อมูลตามต้องการ -->
-              </ul>
-              <!-- รูปภาพห้องประเภท 4 -->
-              <img src="path/to/image4.jpg" alt="ห้องประเภท 4">
+              <!-- ข้อมูลห้องประเภท 4 -->
+              <ul style="list-style: none; padding: 0; text-align: left;">
+                <div style="text-align: center;">
+                  <img src="img/sweet.jpg" alt="ห้องประเภท 1" width="450">
+              </div>
+                <li>    Sweet ฝากเลี้ยงแมว ได้ สูงสุด : 10 ตัว</li>
+                <li>    สิ่งอำนวยความสะดวกภายในห้อง</li>
+                <li>    ของเล่นแมว</li>
+                <li>    กระบะทราย</li>
+                <li>    จานข้าว</li>
+                <li>    จานน้ำ</li>
+                <li>    กล้องวงจรปิด</li>
+                <li>    แอร์</li>
+                <li><a style="color: red;" href="#">อาหารแมว ผู้ฝากต้องนำมาเอง</a></li>
+            </ul>
+            </div>
+          </div>
+        </div>
             </div>
           </div>
         </div>
