fix style add logo

--- a/Template.html
+++ b/Template.html
@@ -12,7 +12,10 @@
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="home.html">Filo</a>
+  <a class="navbar-brand" href="home.html">
+    <img src="/img/logo.png" alt="Filo Logo" width="30" height="30" class="d-inline-block align-top">
+    Filo
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -25,10 +28,10 @@
         <a class="nav-link" href="reserve.html">การจองห้อง</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="inforoom.html">ข้อมูลห้อง</a>
+        <a class="nav-link" href="inforoom2.html">ข้อมูลห้อง</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="Termsofservice.html">เงื่อนไขการบริการ</a>
+        <a class="nav-link" href="Showcondition.html">เงื่อนไขการบริการ</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="login.html">เข้าสู่ระบบ</a>
@@ -39,14 +42,16 @@
 </nav>
 
 <!-- Main Content -->
-<div class="container mt-5">
+<div class="container mt-5 ">
   <h2>ยินดีต้อนรับสู่เว็บไซต์ของเรา</h2>
   <!-- ทำส่วนหลักของเว็บไซต์ที่นี่ -->
 
 </div>
 
 <!-- footer.html -->
-<footer class="bg-dark text-light p-4 mt-5">
+
+<!-- Footer -->
+<footer class="bg-darkpink black p-10 mt-5 ">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
@@ -55,14 +60,13 @@
         <p>Email: your@email.com</p>
         <p>Phone: 123-456-7890</p>
         <p><a href="https://www.google.com/maps/@8.6500202,99.8923991,15z?entry=ttu" target="_blank">Google Map</a></p>
-</div>
-      </div>
-      <div class="col-md-12 text-right">
-        <p>&copy; 2023 Your Website. All rights reserved.</p>
       </div>
     </div>
   </div>
 </footer>
+
+
+
 
 
 <!-- Bootstrap JS, Popper.js, and jQuery -->
