--- a/catdata.html
+++ b/catdata.html
@@ -64,13 +64,13 @@
         <label for="image">รูปภาพ:</label>
         <input type="file" id="image" name="image" accept="image/*" required>
 
-        <label for="lineId">Line ID:</label>
+        <label for="lineId">เพศ:</label>
         <input type="text" id="lineId" name="lineId" required>
 
-        <label for="description">ลักษณะแมว:</label>
+        <label for="description">สายพันธุ์:</label>
         <textarea id="description" name="description" rows="4" required></textarea>
 
-        <label for="vaccineType">ประเภทวัคซีน:</label>
+        <label for="vaccineType">อายุ:</label>
         <input type="text" id="vaccineType" name="vaccineType" required>
 
         <label for="vaccineDoses">จำนวนเข็ม:</label>
