--- a/login.html
+++ b/login.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Filo</title>
+  <title>Login</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <!-- Favicon -->
+  <link rel="icon" href="https://img.pikbest.com/origin/09/08/90/25GpIkbEsTwmE.png!sw800" type="image/png">
   <style>
     body {
         background-color: #fce4ec; /* สีพื้นหลัง */
@@ -50,7 +52,7 @@
 <body>
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ff4081;">
   <a class="navbar-brand" href="#">Filo</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -81,7 +83,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-    <h3 align="center">Filo</h3>
+    <h3 align="center">เข้าสู่ระบบ</h3>
      <form  name="formlogin" action="" method="POST" id="login">
               <div class="row" style="margin-bottom: 10px;">
               <label class="col-md-4" style="text-align:right"> Username </label>
