--- a/register.html
+++ b/register.html
@@ -1,32 +1,115 @@
-<body>
-    <br>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6 ">
-          <form method="post" name="from">
-            <div class="panel-group">
-              <div class="panel panel-primary text-center">
-                <div class="panel-heading">ลงชื่อเข้าใช้</div>
-                <div class="panel-body">
-                  <div class="input-group">
-                    <span class="input-group-addon alert-info " id="">ชื่อผู้ใช้งาน</span>
-                    <input type="text" name="username" class="form-control " autocomplete="off"
-                      placeholder="" value="">
-                  </div>
-                  <div class="input-group">
-                    <span class="input-group-addon alert-info ">รหัสผ่าน</span>
-                    <input type="text" name="password" class="form-control " autocomplete="off"
-                      placeholder="" value="">
-                    
-                  </div><br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Registration</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <!-- Favicon -->
+  <link rel="icon" href="https://img.pikbest.com/origin/09/08/90/25GpIkbEsTwmE.png!sw800" type="image/png">
+  <style>
+    body {
+        background-color: #fce4ec; /* สีพื้นหลัง */
+        font-family: 'Arial', sans-serif;
+        color: #333; /* สีข้อความทั่วไป */
+    }
+
+    .container {
+        margin-top: 30px;
+    }
+
+    .col-md-4 {
+        text-align: right;
+    }
+
+    .form-control {
+        border: 2px solid #ff4081; /* สีขอบ input */
+        border-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+
+    .btn-info {
+        background-color: #ff4081; /* สีปุ่มกลับหน้าหลัก */
+        border-color: #ff4081;
+    }
+
+    .btn-primary {
+        background-color: #ff4081; /* สีปุ่มเข้าสู่ระบบ */
+        border-color: #ff4081;
+    }
+
+    .btn-info:hover, .btn-primary:hover {
+        background-color: #d81b60; /* สีเมื่อโฮเวอร์ปุ่ม */
+        border-color: #d81b60;
+    }
+
+    p {
+        color: #888; /* สีข้อความท้าย */
+    }
+</style>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ff4081;">
+  <a class="navbar-brand" href="#">Filo</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="#">การจองห้อง</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">ข้อมูลห้อง</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">เงื่อนไขการบริการ</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+</head>
+<body>    <!-- Main Content -->
+  <div class="container mt-5">
+      <h2>Sign Up</h2>
+      <form name="signupForm" action="" method="POST" id="signupForm">
+          <div class="row">
+              <div class="col-md-6">
+                  <label for="username">Username</label>
+                  <input type="text" name="username" class="form-control" required placeholder="Username">
+              </div>
+              <div class="col-md-6">
+                  <label for="password">Password</label>
+                  <input type="password" name="password" class="form-control" required placeholder="Password">
+              </div>
+          </div>
   
-                <br>
-                <input type="submit" name="submit" class="btn btn-success " value="ลงชื่อเข้าใช้">
-                <Input type="reset" value="Reset" class="btn btn-warning" name="data">
-          </form>
-        </div>
-        <div class="col-lg-3"></div>
-      </div>
-    </div>
+          <div class="row">
+              <div class="col-md-6">
+                  <label for="confirmPassword">Confirm Password</label>
+                  <input type="password" name="confirmPassword" class="form-control" required placeholder="Confirm Password">
+              </div>
+              <div class="col-md-6">
+                  <label for="email">Email</label>
+                  <input type="email" name="email" class="form-control" required placeholder="Email">
+              </div>
+          </div>
+  
+          <div class="row">
+              <div class="col-md-6">
+                  <label for="line">Line</label>
+                  <input type="text" name="line" class="form-control" placeholder="Line">
+              </div>
+              <div class="col-md-6">
+                  <label for="phone">Phone</label>
+                  <input type="tel" name="phone" class="form-control" placeholder="Phone">
+              </div>
+          </div>
+  
+          <div class="row" style="margin-block: 20px;">
+              <div class="col-md-12">
+                  <button type="submit" class="btn btn-primary btn-sm">Sign Up</button>
+              </div>
+          </div>
+      </form>
+  </div>
   </body>
