--- a/Showcondition.html
+++ b/Showcondition.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Conditions</title>
+  <title>Filo to Conditions</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="styleTime.css">
 </head>
-<body>
+<body style="background-color: #fce4ec;;">
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light " style="background-color: pink;">
-  <a class="navbar-brand" href="#">Conditions</a>
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color: rgb(250, 159, 174);">
+  <a class="navbar-brand" href="#">Filo to Conditions</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -32,14 +32,14 @@
 </nav>
 
 <!-- Main Content -->
-<div class="container mt-5">
+<div class="container mt-5" >
   <h2></h2>
   <!-- ทำส่วนหลักของเว็บไซต์ที่นี่ -->
 
 </div>
 
-    <div style="text-align: center;">
-    <ul class="ul-text-glow label-text-glow" >
+    <div style="text-align: center; background-color: #fce4ec;" >
+    <ul class="ul-text-glow label-text-glow" style="background-color: #fce4ec;" >
         <li class="li-text-glow">
             <input class="input-text-glow" type="checkbox" checked=""/>
             <div class="div-text-glow">C</div>
@@ -81,7 +81,7 @@
 
     <!---->
 
-    <div style="font-size: 20px;"><br>
+    <div style="font-size: 20px;" class="font-condition" style="background-color: #fce4ec;"><br>
        1.> ค่าบริการ จ่ายหลังจากลูกค้าได้ทำการจองห้องของแมวเสร็จสิ้น (จ่ายได้ทาง QR-Code)<br><br>
 
         2.>ระหว่างการฝากเลี้ยง หากแมวที่นำมาฝากเกิดการอุบัติเหตุหรือเจ็บป่วยระหว่างานฝากเลี้ยง ทางเจ้าของร้านจะไม่รับผิดชอบทั้งสิ้น<br><br>
@@ -103,7 +103,6 @@
                 <input class="inputcarousel" type="radio" name="slider" id="s2"/>
                 <input class="inputcarousel" type="radio" name="slider" id="s3"/>
                 <input class="inputcarousel" type="radio" name="slider" id="s4"/>
-                <input class="inputcarousel" type="radio" name="slider" id="s5"/>
                 <label class="label-carousel" for="s1" id="slider1">
                     <img class="img-carousel" src="./img/std2.jpg" alt />
                 </label>
@@ -126,7 +125,7 @@
     </div>
 
   <!-- Footer -->
-<footer class="bg-dark text-light p-4 mt-5">
+<footer class=" text-light p-4 mt-5" style="background-color: rgb(250, 159, 174);">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
