--- a/catdata.html
+++ b/catdata.html
@@ -23,7 +23,7 @@
         }
 
         label {
-            color: #ff7eb6; /* สีของป้ายชื่อ */
+            color: #000000; /* สีของป้ายชื่อ */
             display: block; /* ให้ป้ายชื่อแสดงบนบรรทัดใหม่ */
             margin-bottom: 8px; /* ระยะห่างข้างล่างของป้ายชื่อ */
         }
