--- a/Showcondition.html
+++ b/Showcondition.html
@@ -19,13 +19,19 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">เข้าสู่ระบบ</a>
+        <a class="nav-link" href="catdata.html">จัดการข้อมูลแมว</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">ข้อมูลห้อง</a>
+        <a class="nav-link" href="reserve.html">การจองห้อง</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">เงื่อนไขการบริการ</a>
+        <a class="nav-link" href="inforoom2.html">ข้อมูลห้อง</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Showcondition.html">เงื่อนไขการบริการ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="login.html">เข้าสู่ระบบ</a>
       </li>
     </ul>
   </div>
@@ -128,13 +134,13 @@
 <footer class=" text-light p-4 mt-5" style="background-color: rgb(250, 159, 174);">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 label-color-font">
           <h4>Contact Us</h4>
           <p>Name : mama mama</p>
           <p>Email: your@email.com</p>
           <p>Phone: 123-456-7890</p>
         </div>
-        <div class="col-md-6 text-right">
+        <div class="col-md-6 text-right label-color-font">
           <p>&copy; 2023 Your Website. All rights reserved.</p>
         </div>
       </div>
