--- a/before.html
+++ b/before.html
@@ -82,7 +82,7 @@
     <div class="col-md-6">
       <h2>Sign up</h2>
       <p>New user? Click below to sign up.</p>
-      <a href="signup.html" class="btn btn-info">Sign up</a>
+      <a href="register.html" class="btn btn-info">Sign up</a>
     </div>
   </div>
 </div>
