--- a/infoRoom2.html
+++ b/infoRoom2.html
@@ -5,8 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <title>ข้อมูลห้อง</title>
+  <link rel="stylesheet" href="styleTime.css">
 </head>
-<body>
+<body style="background-color: #fce4ec ;">
+  <!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color: rgb(250, 159, 174);">
+  <a class="navbar-brand" href="#">Filo to Conditions</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="catdata.html">จัดการข้อมูลแมว</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="reserve.html">การจองห้อง</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="inforoom2.html">ข้อมูลห้อง</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Showcondition.html">เงื่อนไขการบริการ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="login.html">เข้าสู่ระบบ</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<!-- Main Content -->
+<div class="container mt-5" >
+  <h2></h2>
+  <!-- ทำส่วนหลักของเว็บไซต์ที่นี่ -->
+
+</div>
 
   <div class="container mt-5">
     <h2>ข้อมูลห้อง</h2>
@@ -126,9 +160,26 @@
     </div>
 
   </div>
+<!-- Footer -->
+<footer class=" text-light p-4 mt-5" style="background-color: rgb(250, 159, 174);">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 label-color-font">
+        <h4>Contact Us</h4>
+        <p>Name : mama mama</p>
+        <p>Email: your@email.com</p>
+        <p>Phone: 123-456-7890</p>
+      </div>
+      <div class="col-md-6 text-right label-color-font">
+        <p>&copy; 2023 Your Website. All rights reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- Bootstrap JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
