--- a/infoRoom2.html
+++ b/infoRoom2.html
@@ -58,9 +58,9 @@
               <!-- ข้อมูลห้องประเภท 1 -->
               <ul style="list-style: none; padding: 0; text-align: left;">
                 <div style="text-align: center;">
-                  <img src="path/to/image1.jpg" alt="ห้องประเภท 1" width="250">
+                  <img src="./img/sttd1.jpg" alt="ห้องประเภท 1" width="200" height="200px">
               </div>
-                <li>Standard ฝากเลี้ยงแมว ได้ สูงสุด : 1 ตัว</li>
+                <li class="li-">Standard ฝากเลี้ยงแมว ได้ สูงสุด : 1 ตัว</li>
                 <li>สิ่งอำนวยความสะดวกภายในห้อง</li>
                 <li>ของเล่นแมว</li>
                 <li>กระบะทราย</li>
@@ -68,7 +68,7 @@
                 <li>จานน้ำ</li>
                 <li>กล้องวงจรปิด</li>
                 <li>แอร์</li>
-                <li><a style="color: red;" href="#">อาหารแมว ผู้ฝากต้องนำมาเอง หรือ เสียค่าใช้จ่ายเพิ่ม</a></li>
+                <li><a style="color: red;" href="#">**** อาหารแมว ผู้ฝากต้องนำมาเอง หรือ เสียค่าใช้จ่ายเพิ่ม</a></li>
             </ul>
             
               
@@ -89,16 +89,16 @@
               <!-- ข้อมูลห้องประเภท 1 -->
               <ul style="list-style: none; padding: 0; text-align: left;">
                 <div style="text-align: center;">
-                  <img src="path/to/image1.jpg" alt="ห้องประเภท 1" width="250">
+                  <img src="./img/supe1.jpg" alt="ห้องประเภท 1" width="250">
               </div>
-                <li>Standard ฝากเลี้ยงแมว ได้ สูงสุด : 1 ตัว</li>
+                <li>Superior  ฝากเลี้ยงแมวได้สูงสุด: 3 ตัว</li>
                 <li>สิ่งอำนวยความสะดวกภายในห้อง</li>
-                <li>ของเล่นแมว</li>
-                <li>กระบะทราย</li>
-                <li>จานข้าว</li>
-                <li>จานน้ำ</li>
-                <li>กล้องวงจรปิด</li>
-                <li>แอร์</li>
+                  <li>ของเล่นแมว</li>
+                  <li> กระบะทราย</li>
+                    <li> จานข้าว</li>
+                      <li> จานน้ำ</li>
+                        <li> กล้องวงจรปิด</li>
+                          <li> แอร์</li>
                 <li><a style="color: red;" href="#">อาหารแมว ผู้ฝากต้องนำมาเอง หรือ เสียค่าใช้จ่ายเพิ่ม</a></li>
             </ul>
                 <!-- เพิ่มข้อมูลตามต้องการ -->
@@ -119,9 +119,9 @@
               <!-- ข้อมูลห้องประเภท 3 -->
               <ul style="list-style: none; padding: 0; text-align: left;">
                 <div style="text-align: center;">
-                  <img src="path/to/image1.jpg" alt="ห้องประเภท 1" width="250">
+                  <img src="./img/delux.jpg" alt="ห้องประเภท 1" width="250">
               </div>
-                <li>Standard ฝากเลี้ยงแมว ได้ สูงสุด : 1 ตัว</li>
+                <li>Deluxe ฝากเลี้ยงแมวได้สูงสุด: 6 ตัว</li>
                 <li>สิ่งอำนวยความสะดวกภายในห้อง</li>
                 <li>ของเล่นแมว</li>
                 <li>กระบะทราย</li>
@@ -149,9 +149,9 @@
               <!-- ข้อมูลห้องประเภท 1 -->
               <ul style="list-style: none; padding: 0; text-align: left;">
                 <div style="text-align: center;">
-                  <img src="path/to/image1.jpg" alt="ห้องประเภท 1" width="250">
+                  <img src="./img/sweet.jpg" alt="ห้องประเภท 1" width="250">
               </div>
-                <li>Standard ฝากเลี้ยงแมว ได้ สูงสุด : 1 ตัว</li>
+                <li>Sweet ฝากเลี้ยงแมวได้สูงสุด: 10 ตัว</li>
                 <li>สิ่งอำนวยความสะดวกภายในห้อง</li>
                 <li>ของเล่นแมว</li>
                 <li>กระบะทราย</li>
