--- a/expenses.html
+++ b/expenses.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>คำนวณค่าใช้จ่ายในการฝากเลี้ยงแมว</title>
+    <link rel="icon" href="https://img.pikbest.com/origin/09/08/90/25GpIkbEsTwmE.png!sw800" type="image/png">
     <style>
         body {
             background-color: #ff7eb6;
