--- a/infoRoom2.html
+++ b/infoRoom2.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <title>ข้อมูลห้อง</title>
   <link rel="stylesheet" href="styleTime.css">
+  <link rel="icon" href="https://img.pikbest.com/origin/09/08/90/25GpIkbEsTwmE.png!sw800" type="image/png">
 </head>
 <body style="background-color: #fce4ec ;">
   <!-- Navigation Bar -->
