--- a/catdata.html
+++ b/catdata.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>แบบฟอร์มสำหรับข้อมูลแมว</title>
+    <link rel="icon" href="https://img.pikbest.com/origin/09/08/90/25GpIkbEsTwmE.png!sw800" type="image/png">
     <style>
         body {
             background-color: #fce4ec; /* สีพื้นหลัง */
