--- a/catdata.html
+++ b/catdata.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>แบบฟอร์มสำหรับข้อมูลแมว</title>
-    <link rel="icon" href="https://img.pikbest.com/origin/09/08/90/25GpIkbEsTwmE.png!sw800" type="image/png">
     <style>
         body {
             background-color: #fce4ec; /* สีพื้นหลัง */
@@ -93,8 +92,14 @@
 
         <label for="vaccineDoses">จำนวนเข็มที่ฉีดวัคซีน:</label>
         <input type="number" id="vaccineDoses" name="vaccineDoses" required>
+        <label for="spayNeuter">ทำหมัน (Spay/Neuter):</label>
+        <select id="spayNeuter" name="spayNeuter" required>
+            <option value="yes">Yes</option>
+            <option value="no">No</option>
+        </select>
 
         <input type="submit" value="Submit">
+
     </form>
 
 </body>
