--- a/infoRoom2.html
+++ b/infoRoom2.html
@@ -62,6 +62,8 @@
                   <img src="./img/sttd1.jpg" alt="ห้องประเภท 1" width="200" height="250">
               </div>
                 <li>    Standard ฝากเลี้ยงแมว ได้ สูงสุด : 1 ตัว</li>
+                <li>    จำนวนห้อง 20 ห้อง</li>
+                <li>    ราคาห้องละ 250 บาท</li><br><hr style="background-color: white;">
                 <li>    สิ่งอำนวยความสะดวกภายในห้อง</li>
                 <li>    ของเล่นแมว</li>
                 <li>    กระบะทราย</li>
@@ -93,6 +95,8 @@
                   <img src="img/supe1.jpg" alt="ห้องประเภท 1" width="450">
               </div>
                 <li>    Superior ฝากเลี้ยงแมว ได้ สูงสุด : 3 ตัว</li>
+                <li>    จำนวนห้อง 10 ห้อง</li>
+                <li>    ราคาห้องละ 450 บาท</li><br><hr style="background-color: white;">
                 <li>    สิ่งอำนวยความสะดวกภายในห้อง</li>
                 <li>    ของเล่นแมว</li>
                 <li>    กระบะทราย</li>
@@ -119,6 +123,8 @@
                   <img src="img/delux.jpg" alt="ห้องประเภท 1" width="450">
               </div>
                 <li>    Deluxe ฝากเลี้ยงแมว ได้ สูงสุด : 6 ตัว</li>
+                <li>    จำนวนห้อง 3 ห้อง</li>
+                <li>    ราคาห้องละ 550 บาท</li><br><hr style="background-color: white;">
                 <li>    สิ่งอำนวยความสะดวกภายในห้อง</li>
                 <li>    ของเล่นแมว</li>
                 <li>    กระบะทราย</li>
@@ -145,6 +151,8 @@
                   <img src="img/sweet.jpg" alt="ห้องประเภท 1" width="450">
               </div>
                 <li>    Sweet ฝากเลี้ยงแมว ได้ สูงสุด : 10 ตัว</li>
+                <li>    จำนวนห้อง 1 ห้อง</li>
+                <li>    ราคาห้องละ 900 บาท</li><br><hr style="background-color: white;">
                 <li>    สิ่งอำนวยความสะดวกภายในห้อง</li>
                 <li>    ของเล่นแมว</li>
                 <li>    กระบะทราย</li>
