--- a/Template.html
+++ b/Template.html
@@ -16,6 +16,13 @@
     <img src="/img/logo.png" alt="Filo Logo" width="30" height="30" class="d-inline-block align-top">
     Filo
   </a>
+  <li class="nav-item">
+    <img src="profile.jpg" alt="Profile" width="30" height="30" class="d-inline-block align-top rounded-circle">
+  </li>
+  <a class="navbar-brand" href="user.html">
+    Welcome, John Doe <!-- Replace with the actual username -->
+  </a>
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,9 +44,11 @@
         <a class="nav-link" href="login.html">เข้าสู่ระบบ</a>
       </li>
     </ul>
-    
   </div>
 </nav>
+
+
+
 
 <!-- Main Content -->
 <div class="container mt-5 ">
