--- a/catdata.html
+++ b/catdata.html
@@ -7,19 +7,28 @@
     <style>
         body {
             background-color: #fce4ec; /* สีพื้นหลัง */
-            color: #fff; /* สีตัวอักษรหรือข้อความ */
+            color: #0c0c0c; /* สีตัวอักษรหรือข้อความ */
             font-family: Arial, sans-serif; /* แนะนำให้ใช้ฟอนต์ที่เหมาะสมกับเว็บ */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
         }
 
         h2 {
-            color:#fde9eb; /* สีของหัวข้อหลัก */
+            color: #0c0c0c; /* สีของหัวข้อหลัก */
+            margin-bottom: 20px; /* เพิ่มระยะห่างด้านล่าง */
         }
 
         form {
-            background-color:  #fce4ec; /* สีพื้นหลังของแบบฟอร์ม */
+            background-color: #fce4ec; /* สีพื้นหลังของแบบฟอร์ม */
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* เพิ่มเงาในแบบฟอร์ม */
+            width: 50%;
+             /* จัดข้อความและกล่องใส่ข้อความตรงกลาง */
         }
 
         label {
@@ -33,18 +42,26 @@
         textarea,
         select,
         input[type="number"] {
-            width: 100%;
+            width: calc(100% - 16px);
             padding: 8px;
             margin-bottom: 16px;
-            border: 1px solid #ff7eb6; /* สีขอบของช่องกรอก */
+            border: 1px solid #ff7eb6;
             border-radius: 4px;
             box-sizing: border-box;
-            background-color: #fff; /* สีพื้นหลังของช่องกรอก */
+            background-color: #fff;
+            color: #0c0c0c;
+        }
+
+        input[type="text"],
+        input[type="file"],
+        input[type="number"],
+        textarea {
+            width: calc(100% - 16px);
         }
 
         input[type="submit"] {
-            background-color: #ff7eb6; /* สีปุ่ม Submit */
-            color: #fff; /* สีตัวอักษรของปุ่ม Submit */
+            background-color: #ff7eb6;
+            color: #fff;
             padding: 10px 20px;
             border: none;
             border-radius: 4px;
@@ -52,32 +69,42 @@
         }
 
         input[type="submit"]:hover {
-            background-color: #fce4ec; /* สีปุ่ม Submit เมื่อโฮเวอร์ */
+            background-color: #fce4ec;
         }
     </style>
 </head>
 <body>
 
-    <h2>กรอกข้อมูลแมว</h2>
+    <h2>ข้อมูลแมว</h2>
 
     <form action="/submit" method="post">
         <label for="image">รูปภาพ:</label>
         <input type="file" id="image" name="image" accept="image/*" required>
 
-        <label for="lineId">เพศ:</label>
-        <input type="text" id="lineId" name="lineId" required>
+        <label for="sex">เพศ:</label>
+        <input type="text" id="sex" name="sex" required>
 
         <label for="description">สายพันธุ์:</label>
         <textarea id="description" name="description" rows="4" required></textarea>
 
-        <label for="vaccineType">อายุ:</label>
-        <input type="text" id="vaccineType" name="vaccineType" required>
+        <label for="age">อายุ:</label>
+        <input type="text" id="age" name="age" required>
 
-        <label for="vaccineDoses">จำนวนเข็ม:</label>
+        <label for="vaccineDoses">จำนวนเข็มที่ฉีดวัคซีน:</label>
         <input type="number" id="vaccineDoses" name="vaccineDoses" required>
+        <label for="spayNeuter">ทำหมัน (Spay/Neuter):</label>
+        <select id="spayNeuter" name="spayNeuter" required>
+            <option value="yes">Yes</option>
+            <option value="no">No</option>
+        </select>
 
         <input type="submit" value="Submit">
+        <!-- Note for incomplete vaccination information -->
+        <p style="color: red; font-style: italic;">
+            *กรณีข้อมูลไม่ครบถ้วนให้กรอกข้อมูลตามใบวัคซีน
+        </p>
     </form>
 
 </body>
 </html>
+   
