--- a/Template.html
+++ b/Template.html
@@ -54,21 +54,11 @@
 
 
 <!-- Main Content -->
-<div class="container mt-5 " >
+<div class="container content mt-5 " >
   <h2>ยินดีต้อนรับสู่เว็บไซต์ของเรา</h2>
- 
 
 </div>
 
-<!-- body -->
-  <div class="container mt-5 ">
-  <h2>ยินดีต้อนรับสู่เว็บไซต์ของเรา</h2>
-</div>
-
-<div class="container mt-5 ">
-  <h2>ยินดีต้อนรับสู่เว็บไซต์ของเรา</h2>
-</div>
-  
 <!-- body -->
 
 
