--- a/infoRoom2.html
+++ b/infoRoom2.html
@@ -172,16 +172,17 @@
       </div>
 
       <!-- ปุ่มกดหน้าต่อไป -->
-<a class="carousel-control-prev" href="#roomCarousel" role="button" data-slide="prev">
-  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-  <span class="sr-only">Previous</span>
-</a>
-<!-- ปุ่มกดหน้าถัดไป -->
-<a class="carousel-control-next" href="#roomCarousel" role="button" data-slide="next">
-  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-  <span class="sr-only">Next</span>
-</a>
-</div>
+      <a class="carousel-control-prev" href="#roomCarousel" role="button" data-slide="prev" style="left: -50px;bottom: -500px;">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+  
+      <a class="carousel-control-next" href="#roomCarousel" role="button" data-slide="next" style="left: 1150px;top: 500px;">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
 
 
 
