--- a/Showcondition.html
+++ b/Showcondition.html
@@ -108,7 +108,7 @@
         7.>กรณียกเลิกการจอง ต้องบอกก่อนล่วงหน้า 7 วัน<br><br>
         8.>จองล่วงหน้าได้ไม่เกิน 1 เดือน<br><br>
         9.>หากข้อมูลของแมวไม่ครบถ้วนให้กรอกข้อมูลของแมวให้ตรงตามใบวัคซีน<br><br>
-        10.>เวลาเปิดทำการ 9.00-19.00<br><br>
+        10.>เวลาเปิดทำการ 9.00-19.00 (ไม่มีวันหยุด)<br><br>
         11.>การฝากเลี้ยงขั้นต่ำ คือ 1 วัน<br><br>
         <p class="body-carousel-1">
             <p id="slider" class="root-carousel ">
