--- a/printdatacat.html
+++ b/printdatacat.html
@@ -67,7 +67,7 @@
 <body style="background-color: rgb(236, 178, 188);">
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="#">Filo to Conditions</a>
+    <a class="navbar-brand" href="#">Profile Cat</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
